--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,8 @@ Cover Image: *A Goldsmith in his Shop* by Petrus Christus
 This work by [Sean Kross](http://seankross.com) is licensed 
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/). Zero rights reserved.
 
+This book is available for purchase on [Leanpub.com](https://leanpub.com/unix).
+
 # Dedication {-}
 
 In memory of Toby Kross.
