--- a/06-Git-and-GitHub.Rmd
+++ b/06-Git-and-GitHub.Rmd
@@ -11,10 +11,10 @@ date of those changes, and where the changes were made. If a critical file gets
 deleted by accident, or if you make a breaking change to your code and you want
 to try to figure out where the breaking change was made, you can use Git to
 restore the deleted file or find the new bug in your program. Git organizes
-groups of files that you're tracking into a **repository**, which is just a
-directory where all of the changes to files in that directory are tracked. Git
-can also help you collaborate with others when you're writing software. As
-[Karl Broman](https://twitter.com/kwbroman) says
+groups of files that you're tracking into a **repository**; not to be mistaken
+for a supository, this is just a directory where all of the changes to files in
+that directory are tracked. Git can also help you collaborate with others when 
+you're writing software. As [Karl Broman](https://twitter.com/kwbroman) says
 (paraphrasing [Mark Holder](https://twitter.com/mtholder)):
 "Your closest collaborator is you six months ago, but you don’t reply to
 emails."
